# ai_math_tutor

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 285eda1f35f3_add_book_index_table.py  314e527774c9_add_bookmarks_col_to_user_table.py  3f975ddefbd9_add_new_tables.py  7df346b8b8ed_refactor_models_to_use_sqlmodel.py  85c43c96af0c_add_page_count_to_books_and_create_.py  d05edba7b069_change_ingestion_status_to_enum_type.py  d263c9b777bb_update_chat_history_to_include_user_id.py  e410966275f8_create_initial_tables_for_users_books_.py  f0a4063e4289_fix_back_populates_for_chat_history.py
api/: main.py  schemas.py
src/ai_math_tutor/: app.py  backend.py  chunk_and_embed.py  config.py  embeddings.py  extract_content_from_pdf.py  rag.py  security.py  utils.py
tests/: test_embedding.py  test_index_features.py  test_pdf_ingestion.py  test_utils.py
