[project]
name = "ai-math-tutor"
version = "0.1.0"
description = ""
authors = [
    {name = "swhh",email = "seamus.holland@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = ["google-genai (>=1.33.0,<2.0.0)",
"numpy (<2.0.0)",
"pymupdf (>=1.26.4,<2.0.0)",
"langchain-chroma (>=0.2.5,<0.3.0)",
"langgraph (>=0.6.6,<0.7.0)",
"langchain-huggingface (>=0.3.1,<0.4.0)",
"torch (==2.2.2)",
"dotenv (>=0.9.9,<0.10.0)",
"langchain[google-genai] (>=0.3.27,<0.4.0)",
"sentence-transformers (>=5.1.0,<6.0.0)",
"streamlit (>=1.49.1,<2.0.0)"]



[tool.poetry]
packages = [{include = "ai_math_tutor", from = "src"}]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


